--- a/res/layout/listitem.xml
+++ b/res/layout/listitem.xml
@@ -5,4 +5,4 @@
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:singleLine="false"
-          android:textStyle="bold"/
+          android:textStyle="bold"/>
