--- a/res/layout/patient_layout.xml
+++ b/res/layout/patient_layout.xml
@@ -21,6 +21,17 @@
                           android:layout_height="wrap_content"
                           android:layout_width="wrap_content"
                           android:orientation="vertical" android:layout_gravity="center_vertical">
+
+                <TextView android:id="@+id/gender"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textSize="10dip"
+                          android:paddingLeft="15dip"
+                          android:text="Gender : "
+                          android:layout_below="@+id/country"
+                          android:textColor="#000000"
+                        />
+
                 <!-- Name -->
                 <TextView android:id="@+id/name"
                           android:layout_width="wrap_content"
@@ -43,6 +54,16 @@
                           android:text="Surname : "
                         />
 
+                <TextView android:id="@+id/ssn"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textSize="10dip"
+                          android:paddingLeft="15dip"
+                          android:text="Social Security Number : "
+                          android:layout_below="@+id/country"
+                          android:textColor="#000000"
+                        />
+
                 <TextView android:id="@+id/email"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
@@ -50,6 +71,16 @@
                           android:textSize="10dip"
                           android:paddingLeft="15dip"
                           android:text="Email : "
+                          android:textColor="#000000"
+                        />
+
+                <TextView android:id="@+id/phone"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textSize="10dip"
+                          android:paddingLeft="15dip"
+                          android:text="Phone : "
+                          android:layout_below="@+id/country"
                           android:textColor="#000000"
                         />
 
@@ -61,6 +92,17 @@
                           android:text="Age : "
                           android:textColor="#000000"
                           android:layout_below="@+id/email"/>
+
+                <TextView android:id="@+id/bPlace"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textSize="10dip"
+                          android:paddingLeft="15dip"
+                          android:text="Birth Place : "
+                          android:layout_below="@+id/country"
+                          android:textColor="#000000"
+                        />
+
                 <TextView android:id="@+id/street"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
@@ -90,7 +132,7 @@
                           android:layout_height="wrap_content"
                           android:textSize="10dip"
                           android:paddingLeft="15dip"
-                          android:text="Country : "
+                          android:text="Zip Code : "
                           android:textColor="#000000"
                           android:layout_below="@+id/city"/>
                 <TextView android:id="@+id/desc"
@@ -110,6 +152,15 @@
                           android:orientation="vertical" android:layout_gravity="center_vertical"
                     >
 
+                <TextView android:id="@+id/genderFill"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textSize="10dip"
+                          android:paddingLeft="15dip"
+                          android:text="Gender to fill"
+                          android:textColor="#000000"
+                          android:layout_gravity="left|center_vertical"/>
+
                 <TextView android:id="@+id/nameFill"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
@@ -126,6 +177,16 @@
                           android:text="Fname to fill"
                           android:textColor="#000000"
                         />
+
+                <TextView android:id="@+id/ssnFill"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textSize="10dip"
+                          android:paddingLeft="15dip"
+                          android:text="Ssn to fill"
+                          android:textColor="#000000"
+                          android:layout_gravity="left|center_vertical"/>
+
                 <TextView android:id="@+id/emailFill"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
@@ -135,6 +196,16 @@
                           android:layout_below="@+id/fName"
                           android:textColor="#000000"
                           android:layout_toRightOf="@+id/email"/>
+
+                <TextView android:id="@+id/phoneFill"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textSize="10dip"
+                          android:paddingLeft="15dip"
+                          android:text="Phone to fill"
+                          android:textColor="#000000"
+                          android:layout_gravity="left|center_vertical"/>
+
                 <TextView android:id="@+id/ageFill"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
@@ -142,6 +213,15 @@
                           android:paddingLeft="15dip"
                           android:text="Age to fill"
                           android:textColor="#000000"/>
+
+                <TextView android:id="@+id/bPlaceFill"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textSize="10dip"
+                          android:paddingLeft="15dip"
+                          android:text="Bplace to fill"
+                          android:textColor="#000000"
+                          android:layout_gravity="left|center_vertical"/>
 
 
                 <TextView android:id="@+id/streetFill"
@@ -170,8 +250,10 @@
                           android:layout_height="wrap_content"
                           android:textSize="10dip"
                           android:paddingLeft="15dip"
-                          android:text="country to fill"
+                          android:text="zip code to fill"
                           android:textColor="#000000"/>
+
+
                 <TextView android:id="@+id/descFill"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
@@ -179,7 +261,7 @@
                           android:paddingLeft="15dip"
                           android:text="Desc to fill"
                           android:textColor="#000000"
-                          android:layout_gravity="center"/>
+                          android:layout_gravity="left|center_vertical"/>
             </LinearLayout>
         </LinearLayout>
         <ImageView
