Edit && Delete done /!\ db vide et ne se met pas a jour donc non testable à ce point!

--- a/res/menu/patient_activity_menu.xml
+++ b/res/menu/patient_activity_menu.xml
@@ -7,4 +7,7 @@
     <item android:id="@+id/meetingPatient"
           android:title="Meetings"
             />
+    <item android:id="@+id/deletePatient"
+          android:title="Delete"
+            />
 </menu>
