--- a/res/menu/patients_list_menu.xml
+++ b/res/menu/patients_list_menu.xml
@@ -4,6 +4,10 @@
 
     <item
             android:id="@+id/addPatient"
-            android:title="Add Patient"/>
+            android:title="Add Patient"
+            android:icon="@drawable/content_new"
+            android:orderInCategory="100"
+            android:showAsAction="ifRoom"
+            />
 
 </menu>
