--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -5,8 +5,23 @@
         AppBaseTheme from BOTH res/values/styles.xml and
         res/values-v11/styles.xml on API 14+ devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
         <!-- API 14 theme customizations can go here. -->
+        <item name="android:actionBarStyle">@style/CustomActionBarTheme</item>
+    </style>
+
+    <style name="CustomActionBarTheme"
+           parent="@android:style/Widget.Holo.Light.ActionBar">
+
+        <item name="android:background">#7AAD2F</item>
+        <item name="android:titleTextStyle">@style/ActionBarTitleTheme</item>
+
+    </style>
+
+    <style name="ActionBarTitleTheme" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+
+        <item name="android:textColor">#FFFFFF</item>
+
     </style>
 
 </resources>
